- Vulkan backend: switch to local ggml-vulkan.cpp build path, preserve upstream clean state, maintain patch; update SPEC and build verified - Why   - Avoid invasive changes in libs/llama.cpp-master to simplify future upstream upgrades.   - Keep all customizations in a dedicated patch for clarity and maintainability. - What   - Copy upstream ggml-vulkan.cpp to local JNI path for compilation:     - libs/llamacpp-jni/src/main/cpp/ggml-vulkan.cpp   - Update JNI CMake to compile local ggml-vulkan.cpp and integrate shader auto-generation:     - file: libs/llamacpp-jni/src/main/cpp/CMakeLists.txt     - define VULKAN_HPP_DISPATCH_LOADER_DYNAMIC, VK_USE_PLATFORM_ANDROID_KHR, VK_API_VERSION=VK_API_VERSION_1_2   - Maintain our Vulkan customizations only in patch:     - libs/llamacpp-jni/src/main/cpp/ggml-vulkan.patch     - Highlights in patch:       - Loader guard and dispatcher init logs: “vkEnumerateInstanceVersion missing; skipping…”, “Dispatch loader init(instance) OK”       - Conditional enabling of VK_KHR_16bit_storage and VK_KHR_shader_non_semantic_info       - Downgrade noisy logs (e.g., “No devices found”) to DEBUG       - Improved diagnostics when enumerating instance extensions/layers/devices   - Keep libs/llama.cpp-master intact (no local invasive changes)   - Update SPEC.md with “Vulkan 源路径与补丁策略”（不改变章节结构） - How to build   - Debug: ./gradlew :app:assembleDebug -PKEYPSWD={xxxx}   - Release: ./gradlew assembleRelease -PKEYPSWD={xxxx} - Notes   - All newly added print logs are in English.   - Upstream clean state ensures smoother future upgrades via patch. - Verification   - Debug build succeeded, APK generated at ./
1. generate libs\llamacpp-jni\src\main\cpp\ggml-vulkan.patch files

1. vulkan backend emulator test pass

feat(vulkan): Android 上启用/稳固 llama.cpp Vulkan 后端（API 1.1），修复链接并补充文档

- 统一 ANDROID_PLATFORM=android-28（libs/llamacpp-jni/build.gradle → cmake.arguments），确保链接期可解析 Vulkan 1.1 核心符号（如 vkGetPhysicalDeviceFeatures2）
- 启用 Vulkan-Hpp 动态分发：
  - 定义 VULKAN_HPP_DI

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,21 @@ captures/
 .externalNativeBuild/
 .cxx/
 
+# CMake build files and cache
+CMakeCache.txt
+CMakeFiles/
+build.ninja
+cmake_install.cmake
+.ninja_deps
+.ninja_log
+# CMake build files in specific directories
+libs/llamacpp-jni/src/main/cpp/CMakeCache.txt
+libs/llamacpp-jni/src/main/cpp/CMakeFiles/
+libs/llamacpp-jni/src/main/cpp/build.ninja
+libs/llamacpp-jni/src/main/cpp/cmake_install.cmake
+libs/llamacpp-jni/src/main/cpp/.ninja_deps
+libs/llamacpp-jni/src/main/cpp/.ninja_log
+
 # Google Services (e.g. APIs or Firebase)
 google-services.json
 
