--- a/gradle.properties
+++ b/gradle.properties
@@ -85,3 +85,6 @@ android.enableJetifier=true
 android.useAndroidX=true
 
 #android.injected.build.abi=arm64-v8a
+
+# 统一 NDK 版本，确保所有未显式声明 ndkVersion 的模块默认使用同一版本
+android.ndkVersion=28.2.13676358
