feat(settings): 精简后端选项为 CPU/Vulkan/CANN，并完善无效值回退为 CPU
build(android): 统一 NDK 版本管理、精简 ABI 为 arm64-v8a/x86_64、移除跨模块 .so 复制，模块各自打包 SO

fix(cmake): 修复 CMakeLists.txt else 分支语法错误并去重重复 add_library 逻辑

docs(spec): 同步记录后端选项精简、ABI/打包策略调整与注意事项

变更摘要

Settings
更新
app/src/main/java/com/example/starlocalrag/SettingsFragment.java
BACKEND_OPTIONS/BACKEND_VALUES 去掉 OpenCL/BLAS，仅保留 CPU/Vulkan/CANN
getBackendPreference(Context)
 对无效值回退为 CPU
在
SPEC.md
“后端选择器重构与配置简化”章节追加“UI 精简与兼容性处理”：旧配置 OPENCL/BLAS 回退为 CPU
构建/ABI/NDK
统一 NDK 版本：
gradle.properties
 设置 android.ndkVersion=28.2.13676358
删除模块内重复 ndkVersion 声明：
移除
app/build.gradle
 与
libs/llamacpp-jni/build.gradle
 的 ndkVersion
精简 ABI：仅保留 arm64-v8a/x86_64
app/build.gradle
 defaultConfig.ndk.abiFilters 'arm64-v8a','x86_64'
libs/llamacpp-jni/build.gradle
 ndk.abiFilters 'arm64-v8a','x86_64'
顶层清理脚本：
build.gradle
 的 clean 不再删除
app/src/main/jniLibs
（该目录留作第三方 SO 专用）
gradle.properties
 注释 org.gradle.java.home 旧 JBR，避免 AGP 8.13.0 使用 JDK17；推荐使用 JDK21（由 JAVA_HOME 指定）
SO 打包策略（模块自管理）
移除跨模块复制：
llamacpp-jni：删除
src/main/cpp/CMakeLists.txt
 将输出写入
app/src/main/jniLibs
 的重定向；改为交由 AGP 自动打包
tokenizers-jni 模块：
删除 32 位 Rust 构建与复制任务，仅保留 arm64-v8a/x86_64
将复制目标改为模块 build/jniLibs/<abi>/
android.sourceSets.main.jniLibs.srcDirs += ['build/jniLibs']，构建系统自动打包 AAR/APK
CMake 修复
libs/llamacpp-jni/src/main/cpp/CMakeLists.txt
修复 if (ANDROID) ... else() ... endif() 语法错误，将 else() 正确链接 Vulkan::Vulkan
删除误植的重复 add_library(llamacpp_jni ...) 与重复链接段
SPEC 文档
追加“构建与ABI精简（本次实现）”：仅 64 位、模块自管理 SO、clean 不触碰 app/jniLibs、收益与动因

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,9 +5,6 @@ plugins {
 android {
     namespace = 'com.example.starlocalrag'
     compileSdk = 34 // Use an appropriate SDK version
-    
-    // 添加NDK配置
-    ndkVersion = "28.2.13676358" // 统一使用最新NDK版本
 
     signingConfigs {
         release {
@@ -36,6 +33,11 @@ android {
         buildConfigField "String", "BUILD_VERSION", "\"${buildTimeStr}\""
         // 将时间戳存储为项目属性，供后续任务使用
         project.ext.buildTimeStamp = buildTimeStr
+
+        // 指定仅构建 arm64-v8a 与 x86_64 两个 ABI
+        ndk {
+            abiFilters 'arm64-v8a', 'x86_64'
+        }
     }
 
     buildTypes {
@@ -90,7 +92,7 @@ android {
         // 配置原生库提取
         jniLibs {
             useLegacyPackaging = true
-            keepDebugSymbols += ['*/arm64-v8a/*.so', '*/armeabi-v7a/*.so']
+            keepDebugSymbols += ['*/arm64-v8a/*.so', '*/x86_64/*.so']
         }
     }
     
@@ -259,8 +261,7 @@ dependencies {
     }
 }
 
-// 确保在构建app之前先复制Rust库
-preBuild.dependsOn ':libs:tokenizers-jni:copyRustLibrariesArm64', ':libs:tokenizers-jni:copyRustLibrariesArm7', ':libs:tokenizers-jni:copyRustLibrariesX86', ':libs:tokenizers-jni:copyRustLibrariesX86_64'
+// 不再从子模块复制 .so 到 app/src/main/jniLibs，模块自行打包其 .so
 
 // 集成APK复制到构建流程中
 afterEvaluate {
