--- a/gradle.properties
+++ b/gradle.properties
@@ -16,8 +16,10 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
-# Explicitly set the JDK path for Gradle (Adjust path if necessary)
-org.gradle.java.home=D:\\tools\\Android\\Android Studio\\jbr
+# Explicitly set the JDK path for Gradle (AGP 8.13.0 requires JDK 21)
+# Prefer using JAVA_HOME pointing to a JDK 21 installation. If you need to hardcode, set to your JDK 21 path.
+# Example:
+# org.gradle.java.home=C:\\Program Files\\Java\\jdk-21
 
 # AndroidX compatibility
 # Enable AndroidX support
