--- a/libs/llamacpp-jni/build.gradle
+++ b/libs/llamacpp-jni/build.gradle
@@ -60,7 +60,6 @@ preBuild.dependsOn buildVulkanShaders
 android {
     namespace = 'com.starlocalrag.llamacpp'
     compileSdkVersion 34
-    ndkVersion "28.2.13676358"
     // buildToolsVersion removed - using default from Android Gradle Plugin
 
     defaultConfig {
@@ -71,7 +70,7 @@ android {
         consumerProguardFiles "consumer-rules.pro"
 
         ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86', 'x86_64'
+            abiFilters 'arm64-v8a', 'x86_64'
         }
 
         externalNativeBuild {
