--- a/gradle.properties
+++ b/gradle.properties
@@ -88,5 +88,7 @@ android.useAndroidX=true
 
 #android.injected.build.abi=arm64-v8a
 
-# 统一 NDK 版本，确保所有未显式声明 ndkVersion 的模块默认使用同一版本
-android.ndkVersion=28.2.13676358
+# NDK 版本不在此固定，避免与环境不一致
+# 推荐做法：在 local.properties 中设置 ndk.dir 指向 %ANDROID_NDK_ROOT%
+# 示例（手动添加到 local.properties）：
+# ndk.dir=D:\\tools\\Android\\Sdk\\ndk\\<your-ndk>
