- Vulkan: build ggml-vulkan as a static lib; flatten/clean conditions; add Vulkan-Hpp/glslc prechecks and feature probing; remove BUILD_ALWAYS TRUE for incremental builds; preserve behavior. - CMake: replace complex generator expressions with classic host checks; consolidate shader gen; clearer logs; no functional changes. - ggml: split into ggml-base and ggml-cpu; provide ggml and ggml::ggml-base/ggml::ggml aliases for upstream compatibility; enable GGML_CPU_GENERIC fallback to avoid missing symbols. - KleidiAI (arm64-v8a): integrate minimal ukernels from local libs/kleidiai when present; add includes/sources conditionally; propagate GGML_CPU_KLEIDIAI/GGML_USE_CPU_KLEIDIAI/GGML_USE_DOTPROD; SME toggle via “KleidiAI-SME”; add English runtime diagnostics. - UI: backend dropdown exposes CPU, Vulkan, KleidiAI-SME; legacy “KLEIDIAI” falls back to CPU with warning.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "libs/tokenizers-rust"]
 	path = libs/tokenizers-rust
 	url = git@github.com:huggingface/tokenizers.git
+[submodule "libs/kleidiai"]
+	path = libs/kleidiai
+	url = git@github.com:ARM-software/kleidiai.git
